--- a/paper/main.tex
+++ b/paper/main.tex
@@ -118,7 +118,7 @@
 
 
 
-\title{Maximizing the Guarded Boundary of a Dynamic Art Gallery}
+\title{Greedy Approximations for Maximizing the Guarded Boundary of an Art Gallery}
 %\date{}
 
 \author{Mihir Patel}
