--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    We study several boundary-maximization variants of the classic Art Gallery problem, where the goal is to place guards at vertices of a simple polygon in order to maximize the portion of the boundary that is fully visible. Specifically, we consider two variants: \MLVG{}, which seeks to maximize the total boundary length visible to $k$ vertex guards, and \MVVG{}, which generalizes this to weighted boundary segments. For both problems, we prove that the objective functions are monotone and submodular, allowing the application of the standard greedy algorithm to obtain a $(1-1/e)$-approximation in $O(kn^2)$ time, improving upon the prior $O(k^2n^2)$-time algorithm. We also show that this approximation factor is the best possible, unless \cclass{P=NP}. We also introduce a new variant, \BMVVG{}, which institutes vertex costs and imposes a budget constraint rather than a cardinality limit for guard placement. We show that several intuitive greedy strategies fail to provide approximation guarantees for this setting. Drawing on techniques from budgeted Max $k$-Coverage literature, we propose an algorithm that may yield a $\frac{1}{2}(1-1/e)$-approximation for \BMVVG{}, opening the door for further theoretical advances in cost-constrained guarding strategies.
+    We study several boundary-maximization variants of the classic Art Gallery problem, where the goal is to place guards at vertices of a simple polygon in order to maximize the portion of the boundary that is fully visible. Specifically, we consider two variants: \MLVG{}, which seeks to maximize the total boundary length visible to $k$ vertex guards, and \MVVG{}, which generalizes this to weighted boundary segments. For both problems, we prove that the objective functions are monotone and submodular, allowing the standard greedy algorithm to obtain a $(1-1/e)$-approximation in $O(kn^2)$ time, improving upon the prior $O(k^2n^2)$-time algorithm. We also show that this approximation factor is the best possible, unless \cclass{P=NP}. We then introduce a new variant, \BMVVG{}, which institutes vertex costs and imposes a budget constraint rather than a cardinality limit for guard placement. We show that several intuitive greedy strategies fail to provide approximation guarantees for this setting. Drawing on techniques from budgeted Max $k$-Coverage literature, we propose an algorithm that may yield a $\frac{1}{2}(1-1/e)$-approximation for \BMVVG{}, opening the door for further theoretical advances in cost-constrained guarding strategies.
 \end{abstract}
