--- a/paper/sections/cost-examples.tex
+++ b/paper/sections/cost-examples.tex
@@ -58,7 +58,7 @@ A first attempt could be to greedily add the vertex which maximizes the marginal
     \caption{A polygon composed of $w$ cones, where the right edge of each cone has weight $w$ and all other edges in the polygon have weight 1. The apicies of each cone have cost $w$, and everything else has cost $w^2$. We are given a budget of $B=w^2$.}
     \label{fig:greedy-heaviest}
 \end{figure}\\\\
-The porposed greedy strategy would start by choosing the vertex that maximizes the total weight guarded. Initially, this is one of the ``valleys'' in the polygon, as these vertices guard $2w+2$ total weight, whereas all other vertices guard at most $w+1$. Any one of these vertices has cost $w^2$, so adding it to our solution uses our entire budget. Thus the algorithm which greedily maximizes the marginal gain in total weight guarded ends up guarding $2w+2$ total weight on~\Cref{fig:greedy-heaviest}.\\\\
+The proposed greedy strategy would start by choosing the vertex that maximizes the total weight guarded. Initially, this is one of the ``valleys'' in the polygon, as these vertices guard $2w+2$ total weight, whereas all other vertices guard at most $w+1$. Any one of these vertices has cost $w^2$, so adding it to our solution uses our entire budget. Thus the algorithm which greedily maximizes the marginal gain in total weight guarded ends up guarding $2w+2$ total weight on~\Cref{fig:greedy-heaviest}.\\\\
 However, an optimal strategy would be to place a guard at each apex. There are $w$ many apices and each one has cost $w$, so to use all of them would cost $w^2$ (which is exactly our budget). This guard placement also guards our entire polygon boundary, meaning the total weight guarded by the optimal set of guards is $w(w)+w(1)+1=w^2+w+1$. To compare the total weight achieved between these two algorithms, the weight achieved by the greedy divided by the weight achieved by the optimal is equal to $\frac{2w+2}{w^2+w+1}$. We can make this value arbitrarily small as we increase $w$, meaning the greedy algorithm which maximizes total weight guarded performs arbitrarily badly compared to an optimal solution and will not achieve any constant factor approximation ratio.\\\\
 Now we consider two alternative greedy strategies and show that they also fail, using~\Cref{fig:greedy-cheapest}. The first would be to greedily add the vertex with cheapest cost. The second would be to greedily add the vertex which maximizes the ratio of marginal gain in total weight to vertex cost. Starting with the first strategy, consider~\Cref{fig:greedy-cheapest} where weights and costs are displayed, and the budget is $w+4$. The cheapest vertex is $A$, which has cost of $2$. The vertex $A$ guards total weight of $2$, and once we have placed a guard there, we cannot afford to place guards at any of the remaining vertices. Thus this greedy strategy achieves total weight of $2$ on this example. An optimal strategy would be to place a guard on either $D$ or $B$, this stays within budget and guards the entire polygon, achieving total weight of $w+3$. Comparing the weight achieved by each strategy, we have $\frac{2}{w+3}$, which we can again make arbitrarily small as we increase $w$.
 \begin{figure}
